feat: PATCH(/me)
