# apps/main-service/src/controllers/user.controller.ts
@@ -20,3 +20,24 @@ export const getMe = async (req: Request, res: Response, next: NextFunction) => 
     next(error);
   }
 };
+
+export const updateMe = async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    const userId = req.user?.userId;
+    if (!userId) {
+      res.status(401).json({ status: 'Error', message: 'Unauthorized' });
+      return;
+    }
+    
+    const { full_name, bio } = req.body;
+    const updatedUser = await userService.updateMe(userId, { full_name, bio });
+    
+    res.status(200).json({
+      status: 'Success',
+      message: 'User profile updated successfully',
+      data: updatedUser,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
